# jsonstore

./: .gitignore  AGENT.md  README.md  method1_store_restore_array.py  pyproject.toml  test_method1_array_store.py
.github/workflows/: python-package.yml  windows-python.yml
arraystore/: main.py
docs/: case_json_quote_type_loss.md  store_class_methods.md  table_structure.md
jsonstore/: __init__.py  main.py
jsonstore/arraystore/: __init__.py  fts.py  store.py  table.py  view.py
jsonstore/jsonstore/: __init__.py  fts.py  store.py  table.py
jsonstore/objectstore/: __init__.py  fts.py  store.py  table.py  view.py
objectstore/: main.py
sqlite_store/: __init__.py  canonicaljson.py
sqlite_store/arraystore/: __init__.py  fts.py  main.py  store.py  table.py  view.py
sqlite_store/jsonstore/: __init__.py  fts.py  main.py  store.py  table.py
sqlite_store/objectstore/: __init__.py  fts.py  main.py  store.py  table.py  view.py
tests/: test_arraystore.py  test_arraystore_class.py  test_arraystore_fts.py  test_arraystore_view.py  test_arraystore_wikipedia_titles.py  test_canonicaljson.py  test_httpimport.py  test_jsonstore.py  test_jsonstore_class.py  test_jsonstore_fts.py  test_main.py  test_objectstore.py  test_objectstore_class.py  test_objectstore_fts.py  test_objectstore_view.py  test_objectstore_wikipedia_titles.py  test_wikipedia_titles.py
