[tool.poetry]
name = "sqlite_store"
version = "0.1.0"
description = "A library to store and retrieve Python lists/arrays in SQLite using JSON."
authors = ["Takashi Sasaki <takashi316@gmail.com>"]
readme = "README.md"
packages = [
    {include = "sqlite_store"}
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
jcs = "^0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
